--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,6 @@
 name = "personal-website"
 compatibility_date = "2025-6-22"
-assets = { directory = "build" }
+
+[assets]
+directory = "build"
+not_found_handling = "single-page-application"
