--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^19.1.0"
   },
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
