--- a/package.json
+++ b/package.json
@@ -26,17 +26,21 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.0.0",
-    "eslint": "^9.33.0",
+    "eslint": "^9.37.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.4.0",
+    "jiti": "^2.6.1",
     "react-router-dom": "^7.6.2",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.0",
+    "typescript-eslint": "^8.46.0",
     "vite": "^7.1.1",
     "wrangler": "^4.20.5"
   }
